<resources>
    <string name="app_name">S.M.S</string>
    <string name="app_name_complete">Shop Management System</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">awaisbagga1097@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>

    <string name="menu_home">Dashboard</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="log_in">LOG IN</string>
    <string name="forget_password"><u>Forget Password?</u></string>
    <string name="login">Login</string>

    <string name="loading">Loading..</string>
    <string name="ok">OK</string>
    <string name="menu_today">Today Sale</string>
    <string name="menu_sale_report">"Sale "</string>
    <string name="menu_stock">"Stock "</string>
    <string name="menu_short">Short Products</string>
    <string name="menu_reports">Reports</string>
    <string name="menu_companies">Companies</string>
    <string name="menu_customers">Customers</string>
    <string name="menu_products">Products</string>
    <string name="menu_catloge">Catalogue</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_import">Import Data</string>
    <string name="menu_export">Export Data</string>
    <string name="menu_database">Database</string>
    <string name="menu_setting">Settings</string>
    <string name="user_id">User ID</string>
    <string name="password">Password</string>
    <string name="don_t_have_a_account">Don\'t have a account?</string>
    <string name="create_now"><u>Create Now</u></string>
    <string name="add_shop_detail">Shop Detail</string>
    <string name="add_derail">Add Detail</string>
    <string name="shop_name">Shop Name</string>
    <string name="shop_type">Shop Type</string>
    <string name="phone_number">Phone Number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="employees">Employees</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="owner_name">Owner Name</string>
    <string name="email_address">Email Address</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="save">Save</string>

    <string name="error_failed_to_create_camera_image_file">Failed to create Camera image file</string>
    <string name="error_failed_pick_gallery_image">Failed to pick Gallery image</string>
    <string name="error_failed_to_crop_image">Failed to crop image</string>
    <string name="error_failed_to_compress_image">Failed to compress image</string>
    <string name="error_task_cancelled">Task Cancelled</string>
    <string name="error_camera_app_not_found">Camera app not found</string>
    <string name="image_picker_provider_authority_suffix" translatable="false">.imagepicker.provider</string>

    <string name="title_choose_image_provider">Choose</string>
    <string name="action_cancel">Cancel</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_camera">Camera</string>

    <string name="permission_camera_denied">
        <![CDATA[Camera permission is needed to take a picture. Please allow permission from Settings > Permissions.]]></string>
    <string name="menu_backup">BackUp</string>
    <string name="menu_restore">Restore</string>
    <string name="action_about">.Info</string>
    <string name="menu_brands">Brands</string>
    <string name="menu_rack">Racks</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="old_password">Old Password</string>
    <string name="today_sale">Today :</string>
    <string name="sale">Sale</string>
    <string name="products">Products</string>
    <string name="date_wise_sale">Date Wise Sale :</string>
    <string name="month">Month</string>
    <string name="brand_wise_sale">Brand Wise Sale :</string>
    <string name="all_products">All Products: </string>
    <string name="see_all"><![CDATA[See all >>]]></string>
    <string name="short_products">Short Products :</string>
    <string name="add_new_brand">Add New Brand</string>
    <string name="add_new_product">Add New Product</string>
    <string name="add_new_rack">Add New Rack</string>
    <string name="add_new_category">Add New Category</string>
    <string name="brand_name">Brand Name</string>
    <string name="rack_name">Rack Name</string>
    <string name="product_name">Product Name</string>
    <string name="rack_title">Rack Title</string>
    <string name="category_title">Category Title</string>
    <string name="all_brands">All Brands :</string>
    <string name="all_category">All Categories :</string>
    <string name="all_racks">All Racks :</string>
    <string name="all_comanies">All Comanies :</string>
    <string name="company_name">Company Name</string>
    <string name="shop_pic">Shop Pic:</string>
    <string name="menu_sync">Sync</string>
    <string name="menu_unload">Upload</string>
    <string name="menu_sever">Server</string>
    <string name="add_new_customer" >Add New Customer:</string>
    <string name="add_new_company" >Add New Company:</string>
    <string name="add_new_supplier" >Add New Supplier:</string>
    <string name="cutomer_name">Name</string>
    <string name="cutomer_name_">Customer Name</string>
    <string name="all_cusromer" >All Customers:</string>
    <string name="all_companies" >All Companies:</string>
    <string name="all_suppliers" >All Suppliers:</string>
    <string name="menu_category">Category</string>
    <string name="qty">QTY</string>
    <string name="product">Product</string>
    <string name="create_new_receipt">Create New Receipt</string>
    <string name="unit_price">Unit Price</string>
    <string name="category">Category</string>
    <string name="unit_size">Unit Size</string>
    <string name="cartoon_size">Cartoon Size</string>
    <string name="retler_price">Retail Price</string>
    <string name="menu_orders">Orders</string>
    <string name="target">Target</string>
    <string name="progress">Progress</string>
    <string name="recent_used">Recent used:</string>
    <string name="short_pro">Short Pro.</string>
    <string name="reciept">Receipt</string>
    <string name="_0">0</string>
    <string name="toady_receipts">Toady Receipts:</string>
    <string name="no_record_found">No record found</string>
    <string name="menu_suppliers">Suppliers</string>
    <string name="remarks">Remarks</string>

</resources>