<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/nav_main"
        android:icon="@drawable/ic_menu_camera"
        android:title="@string/menu_catloge">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/dashboard_img_icon"
                    android:title="@string/menu_home" />
                <item
                    android:id="@+id/nav_orders"
                    android:icon="@drawable/purchase_order_img_icon"
                    android:title="@string/menu_orders" />
                <item
                    android:id="@+id/nav_stock"
                    android:icon="@drawable/stock_img_icon"
                    android:title="@string/menu_stock" />

                <item
                    android:id="@+id/nav_products"
                    android:icon="@drawable/product_icon"
                    android:title="@string/menu_products" />
                <item
                    android:id="@+id/nav_gallery"
                    android:icon="@drawable/customers_img_icon"
                    android:title="@string/menu_customers" />
                <item
                    android:id="@+id/nav_slideshow"
                    android:icon="@drawable/company_img_icon_colr"
                    android:title="@string/menu_companies" />
                <item
                    android:id="@+id/nav_category"
                    android:icon="@drawable/caregory_img_icon"
                    android:title="@string/menu_category" />
                <item
                    android:id="@+id/nav_brands"
                    android:icon="@drawable/brand_img_icon"
                    android:title="@string/menu_brands" />
                <item
                    android:id="@+id/nav_rack"
                    android:icon="@drawable/rack_img_icon"
                    android:title="@string/menu_rack" />
            </group>
        </menu>
    </item>


    <item
        android:id="@+id/nav_report"
        android:icon="@drawable/ic_menu_camera"
        android:title="@string/menu_reports">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_today"
                    android:icon="@drawable/roday_sale_img_2_icon"
                    android:title="@string/menu_today" />
                <item
                    android:id="@+id/nav_sale_rep"
                    android:icon="@drawable/today_sale_img_icon"
                    android:title="@string/menu_sale_report" />
                <item
                    android:id="@+id/nav_add_stock"
                    android:icon="@drawable/stock_img_icon"
                    android:title="@string/menu_stock" />

                <item
                    android:id="@+id/nav_short"
                    android:icon="@drawable/short_products_img_icon"
                    android:title="@string/menu_short" />
            </group>
        </menu>
    </item>


    <item
        android:id="@+id/nav_database"
        android:icon="@drawable/database_icon"
        android:title="@string/menu_database">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_backup"
                    android:icon="@drawable/databse_backup_icon_img"
                    android:title="@string/menu_backup" />
                <item
                    android:id="@+id/nav_restore"
                    android:icon="@drawable/database_restore_img_icon"
                    android:title="@string/menu_restore" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/nav_server"
        android:icon="@drawable/database_icon"
        android:title="@string/menu_sever">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_server_setting"
                    android:icon="@drawable/server_setting_img_icon"
                    android:title="@string/menu_setting" />
                <item
                    android:id="@+id/nav_sync"
                    android:icon="@drawable/sync_img_icon"
                    android:title="@string/menu_sync" />
                <item
                    android:id="@+id/nav_upload"
                    android:icon="@drawable/upload_img_icon"
                    android:title="@string/menu_unload" />
            </group>
        </menu>
    </item>


    <item
        android:id="@+id/nav_tools"
        android:icon="@drawable/settings_icon"
        android:title="@string/menu_tools">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_import"
                    android:icon="@drawable/import_img_icon"
                    android:title="@string/menu_import" />
                <item
                    android:id="@+id/nav_export"
                    android:icon="@drawable/export_img_icon"
                    android:title="@string/menu_export" />
                <item
                    android:id="@+id/nav_setting"
                    android:icon="@drawable/setting_img_icon"
                    android:title="@string/menu_setting" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/user_lock_img_icon"
                    android:title="@string/menu_logout" />
                <item
                    android:id="@+id/nav_exit"
                    android:icon="@drawable/exit_icon"
                    android:title="@string/action_exit" />
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/info_img_icon"
                    android:title="@string/action_about" />

            </group>
        </menu>
    </item>

</menu>