<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.awais.storemanagementsystem.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_products"
        android:name="com.awais.storemanagementsystem.ui.home.HomeFragment"
        android:label="@string/menu_products"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.awais.storemanagementsystem.ui.gallery.GalleryFragment"
        android:label="@string/menu_customers"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.awais.storemanagementsystem.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_companies"
        tools:layout="@layout/fragment_slideshow" />


    <fragment
        android:id="@+id/nav_today"
        android:name="com.awais.storemanagementsystem.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_today"
        tools:layout="@layout/fragment_slideshow" />

</navigation>