<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".ui.slideshow.SlideshowFragment">

    <TextView
        android:id="@+id/title_text_view"
        style="@style/H2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_customer" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardview"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="200dp"
            app:cardElevation="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/empty_img_icon"
                android:background="@color/LightGrey"
                android:scaleType="centerInside"
                tools:ignore="ContentDescription" />

        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            app:cardCornerRadius="200dp"
            app:cardElevation="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/cardview"
            app:layout_constraintEnd_toEndOf="@+id/cardview">

            <ImageView
                android:id="@+id/add_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_baseline_add_24"
                tools:ignore="ContentDescription" />

        </com.google.android.material.card.MaterialCardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/brand_mv"
                android:layout_width="31dp"
                android:layout_height="31dp"
                android:src="@drawable/ic_baseline_person_img"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/brand_name_edit_text"
                style="@style/Body_black"
                android:textAllCaps="true"
                android:inputType="textCapCharacters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cutomer_name"
                tools:ignore="Autofill" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/mobile_img_icon"/>

            <EditText
                android:id="@+id/phone_number_edit_text"
                style="@style/Body_black"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:hint="@string/phone_number"
                android:inputType="phone" />

            <EditText
                android:id="@+id/mobile_number_edit_text"
                style="@style/Body_black"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:hint="@string/mobile_number"
                android:inputType="phone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="31dp"
                android:layout_height="30dp"
                android:src="@drawable/address_img_icon" />

            <EditText
                android:id="@+id/country_edit_text"
                style="@style/Body_black"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:hint="@string/country" />

            <EditText
                android:id="@+id/city_edit_text"
                style="@style/Body_black"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:hint="@string/city" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <EditText
                android:id="@+id/address_edit_text"
                style="@style/Body_black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="12dp"
            android:backgroundTint="@color/purple_500"
            android:text="@string/save"
            android:textAllCaps="false"
            app:cornerRadius="20dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/count_tv"
                style="@style/H2"
                android:layout_width="0dp"
                android:layout_weight="7"
                android:layout_height="wrap_content"
                android:text="@string/all_cusromer" />

            <TextView
                android:id="@+id/image_view_see"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_marginStart="8sp"
                android:padding="1sp"
                android:paddingStart="0sp"
                android:paddingEnd="0sp"
                android:text="Seel all"
                android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_24"
                 />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            tools:listitem="@layout/item_notification"/>

    </LinearLayout>

</LinearLayout>